// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`script line shape 1`] = `
ScriptLine {
  "content": "foobar",
  "highlight": true,
  "lineNumber": 5,
}
`;

exports[`script line to provide default highlight 1`] = `
ScriptLine {
  "content": "foobar",
  "highlight": false,
  "lineNumber": 5,
}
`;
